opam-version: "1.2"
name: "opmer"
authors: "Francois BERENGER <ligand@free.fr>"
maintainer: "ligand@free.fr"
homepage: "https://github.com/UnixJunkie/opmer"
bug-reports: "https://github.com/UnixJunkie/opmer/issues"
dev-repo: "https://github.com/UnixJunkie/opmer.git"
license: "LGPL"
build: [
  ["jbuilder" "build" "@install"]
]
install: [
  ["jbuilder" "install"]
]
remove: [
  ["jbuilder" "uninstall"]
]
depends: [
  "jbuilder" {build}
  "batteries"
  "dolog"
  "parany"
  "minicli"
]
